[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/light.png" type="Texture" id=1]
[ext_resource path="res://Pawn/PawnMechanics/VisionManager.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="VisionManager" type="Node2D"]
script = ExtResource( 2 )

[node name="LightSource" type="Light2D" parent="."]
visible = false
texture = ExtResource( 1 )
mode = 2

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="SkyRaycastCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -20 )
rotation = -3.14159
enabled = true
exclude_parent = false

[node name="LightCollisionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="LightCollisionShape" type="CollisionShape2D" parent="LightCollisionArea"]
shape = SubResource( 1 )
[connection signal="body_entered" from="LightCollisionArea" to="." method="_on_LightCollisionArea_body_entered"]
[connection signal="body_exited" from="LightCollisionArea" to="." method="_on_LightCollisionArea_body_exited"]
